[package]
name = "umleak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }
libc = "0.2"
libbpf-rs = "0.21.2"
structopt = "0.3"
blazesym = "0.2.0-alpha.5"
object = "0.25"
plain = "0.2"
chrono = "0.4.26"
# clap = "4.4.0"

[build-dependencies]
libbpf-cargo = "0.21.2"
